--- a/src/campaign.html
+++ b/src/campaign.html
@@ -201,7 +201,7 @@
       </div>
       <div class="campaign__inner inner">
         <div class="campaign__cards">
-          <div class="campaign__cards-item campaign-card" data-category="info-license">
+          <div class="campaign__cards-item campaign-card" id="license-campaign">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
             </figure>
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-          <div class="campaign-card" data-category="info-trial">
+          <div class="campaign-card" id="trial-campaign">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
             </figure>
@@ -257,7 +257,7 @@
               </div>
             </div>
           </div>
-          <div class="campaign-card" data-category="info-trial">
+          <div class="campaign-card" id="trial-campaign">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
             </figure>
@@ -285,7 +285,7 @@
               </div>
             </div>
           </div>
-          <div class="campaign-card" data-category="info-fun">
+          <div class="campaign-card" id="fun-campaign">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
             </figure>
