--- a/src/index.html
+++ b/src/index.html
@@ -43,16 +43,16 @@
 
 <body>
   <!--loading
-    <div class="js-top-loading">
-      <div class="js-top-loading__start"></div>
-      <div class="js-top-loading__middle">
-        <div class="js-top-loading__left"></div>
-        <div class="js-top-loading__right"></div>
+    <div class="js-loading">
+      <div class="js-loading__start"></div>
+      <div class="js-loading__middle">
+        <div class="js-loading__left"></div>
+        <div class="js-loading__right"></div>
       </div>
-      <div class="js-top-loading__last">
-        <div class="js-top-loading__texts">
-          <h1 class="js-top-loading__main-text">DIVING</h1>
-          <p class="js-top-loading__sub-text">into the ocean</p>
+      <div class="js-loading__last">
+        <div class="js-loading__texts">
+          <h1 class="js-loading__main-text">DIVING</h1>
+          <p class="js-loading__sub-text">into the ocean</p>
         </div>
       </div>
     </div>-->
@@ -231,7 +231,7 @@
         </div>
         <div class="topCampaign__swiper swiper" id="js-topCampaign">
           <div class="topCampaign__slider-wrapper swiper-wrapper">
-            <a href="#" class="topCampaign__card campaign-card swiper-slide">
+            <a href="./campaign.html" class="topCampaign__card campaign-card swiper-slide">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
               </figure>
@@ -249,7 +249,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="topCampaign__card campaign-card swiper-slide">
+            <a href="./campaign.html" class="topCampaign__card campaign-card swiper-slide">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
               </figure>
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="topCampaign__card campaign-card swiper-slide">
+            <a href="./campaign.html" class="topCampaign__card campaign-card swiper-slide">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
               </figure>
@@ -285,7 +285,7 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="topCampaign__card campaign-card swiper-slide">
+            <a href="./campaign.html" class="topCampaign__card campaign-card swiper-slide">
               <figure class="campaign-card__img">
                 <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
               </figure>
@@ -376,7 +376,7 @@
           <h2 class="section-titles__japanese section-titles__japanese--white">ブログ</h2>
         </div>
         <div class="top-blog__cards blog-cards">
-          <a href="#" class="blog-cards__item blog-card">
+          <a href="./blog-article.html" class="blog-cards__item blog-card">
             <div class="blog-card__img-wrapper">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog1.png" alt="ピンク色の珊瑚の写真" />
@@ -389,7 +389,7 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
             </div>
           </a>
-          <a href="#" class="blog-cards__item blog-card">
+          <a href="./blog-article.html" class="blog-cards__item blog-card">
             <div class="blog-card__img-wrapper">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog2.png" alt="こちらに向かって泳ぐウミガメの写真" />
@@ -402,7 +402,7 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
             </div>
           </a>
-          <a href="#" class="blog-cards__item blog-card">
+          <a href="./blog-article.html" class="blog-cards__item blog-card">
             <div class="blog-card__img-wrapper">
               <figure class="blog-card__img">
                 <img src="./assets/images/common/blog3.png" alt="イソギンチャクの中から顔をのぞかせているカクレクマノミ" />
@@ -431,7 +431,7 @@
           <h2 class="section-titles__japanese">お客様の声</h2>
         </div>
         <div class="top-voice__cards voice-cards">
-          <a href="#" class="voice-cards__item voice-card">
+          <a href="./voice.html" class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -450,7 +450,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
           </a>
-          <a href="#" class="voice-cards__item voice-card">
+          <a href="./voice.html" class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
