--- a/src/price.html
+++ b/src/price.html
@@ -187,7 +187,8 @@
     </div>
     <section class="price price-wrapper">
       <div class="price__inner inner">
-        <div class="price__menu" id="license-price">
+        <div id="license-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
+        <div class="price__menu">
           <div class="price__title-wrapper">
             <h2 class="price__title">ライセンス取得</h2>
             <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
@@ -207,6 +208,7 @@
             </div>
           </dl>
         </div>
+        <div id="trial-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
         <div class="price__menu" id="trial-price">
           <div class="price__title-wrapper">
             <h2 class="price__title">体験ダイビング</h2>
@@ -231,7 +233,8 @@
             </div>
           </dl>
         </div>
-        <div class="price__menu" id="fun-price">
+        <div id="fun-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
+        <div class="price__menu">
           <div class="price__title-wrapper">
             <h2 class="price__title">ファンダイビング</h2>
             <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
@@ -255,7 +258,8 @@
             </div>
           </dl>
         </div>
-        <div class="price__menu" id="special-price">
+        <div id="special-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
+        <div class="price__menu">
           <div class="price__title-wrapper">
             <h2 class="price__title">スペシャルダイビング</h2>
             <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
