--- a/src/index.html
+++ b/src/index.html
@@ -42,20 +42,23 @@
 </head>
 
 <body>
-  <!--loading
-    <div class="js-loading">
-      <div class="js-loading__start"></div>
-      <div class="js-loading__middle">
-        <div class="js-loading__left"></div>
-        <div class="js-loading__right"></div>
-      </div>
-      <div class="js-loading__last">
-        <div class="js-loading__texts">
-          <h1 class="js-loading__main-text">DIVING</h1>
-          <p class="js-loading__sub-text">into the ocean</p>
-        </div>
-      </div>
-    </div>-->
+  <!--loading-->
+  <div class="js-loading__start">
+    <div class="js-loading__texts js-loading__texts--green">
+      <h2 class="js-loading__main-text">DIVING</h2>
+      <p class="js-loading__sub-text">into the ocean</p>
+    </div>
+  </div>
+  <div class="js-loading__middle">
+    <div class="js-loading__left"></div>
+    <div class="js-loading__right"></div>
+  </div>
+  <div class="js-loading__last">
+    <div class="js-loading__texts">
+      <h2 class="js-loading__main-text">DIVING</h2>
+      <p class="js-loadingr__sub-text">into the ocean</p>
+    </div>
+  </div>
   <!--header-->
   <header class="no-page__header header">
     <!--SP-hamburger-header-->
@@ -624,7 +627,8 @@
         <nav class="footer__site-map site-map">
           <div class="site-map__sp-layout">
             <div class="site-map__content">
-              <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a></div>
+              <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a>
+              </div>
               <div class="site-map__sub-group">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
