--- a/src/blog-article.html
+++ b/src/blog-article.html
@@ -33,6 +33,8 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+  <script src="./assets/js/jquery.inview.min.js" defer></script>
   <script src="./assets/js/script.js" defer></script>
 </head>
 
